--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <script src="build/js/vendor.min.js"></script>
     <link rel="stylesheet" href="build/css/vendor.css">
+        <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
