add new lens component, but not functioning. Styled pages with materialize and sass

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <!-- base tells router how to compose navigation url's -->
     <base href="/">
     <title>Start</title>
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.css"></script>
     <script src="build/js/vendor.min.js"></script>
     <link rel="stylesheet" href="build/css/vendor.css">
-        <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
+
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
@@ -25,7 +27,7 @@
     <!-- script below is for routing -->
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <link rel="stylesheet" href="build/css/styles.css">
-
+    <script type="text/javascript" src="resources/scripts.js"></script>
 
   </head>
 
